[package]
name = "egg-mode"
version = "0.14.0-beta.1"
authors = ["QuietMisdreavus <grey@quietmisdreavus.net>", "Alex Whitney <adwhit@fastmail.com>"]
description = "Library to interact with the Twitter API"
documentation = "https://tonberry.quietmisdreavus.net/doc/egg_mode/"
repository = "https://github.com/QuietMisdreavus/twitter-rs"
keywords = ["twitter"]
categories = ["api-bindings"]
license = "MPL-2.0"
readme = "README.md"
edition = "2018"

[badges]
# TODO add badge once https://github.com/rust-lang/crates.io/pull/1838 is merged

[dependencies]
base64 = "0.11"
chrono = { version = "0.4", features = ["serde"] }
futures = "0.3"
derive_more = "0.99"
hmac = "0.7"
hyper = "0.13"
hyper-rustls = { version = "0.19", optional = true }
hyper-tls = { version = "0.4", optional = true }
lazy_static = "1.4"
native-tls = { version = "0.2", optional = true }
mime = "0.3"
percent-encoding = "2.1"
rand = "0.7"
regex = "1.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha-1 = "0.8"
thiserror = "1.0.11"
tokio = { version = "0.2.8", features = ["time", "rt-core", "macros"] }
url = "2.1.1"

[features]
default = ["native_tls"]
native_tls = ["native-tls", "hyper-tls"]

[dev-dependencies]
yansi = "0.5.0"
