[package]
name = "egg-mode"
version = "0.16.0"
authors = ["QuietMisdreavus <victoria@quietmisdreavus.net>", "Alex Whitney <adwhit@fastmail.com>"]
description = "Library to interact with the Twitter API"
documentation = "https://docs.rs/egg-mode"
repository = "https://github.com/egg-mode-rs/egg-mode"
keywords = ["twitter"]
categories = ["api-bindings"]
license = "MPL-2.0"
readme = "README.md"
edition = "2018"

[dependencies]
base64 = "0.13"
chrono = { version = "0.4", features = ["serde"] }
futures = "0.3"
derive_more = "0.99"
hmac = "0.11"
hyper = { version = "0.14", features = ["http1", "http2", "client", "stream"] }
hyper-rustls = { version = "0.22", optional = true, default-features = false }
hyper-tls = { version = "0.5", optional = true }
lazy_static = "1.4"
native-tls = { version = "0.2", optional = true }
mime = "0.3"
percent-encoding = "2.1"
rand = "0.8"
regex = "1.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha-1 = "0.9"
thiserror = "1.0.11"
tokio = { version = "1.0", features = ["time"] }
url = "2.1.1"

[features]
default = ["native_tls"]
native_tls = ["native-tls", "hyper-tls"]
rustls = ["hyper-rustls", "hyper-rustls/native-tokio"]
rustls_webpki = ["hyper-rustls", "hyper-rustls/webpki-tokio"]

[dev-dependencies]
yansi = "0.5.0"
structopt = "0.3.13"
tokio = { version = "1.0", features = ["rt", "rt-multi-thread", "macros"] }
